[package]
name = "ai-space-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17", features = ["default", "png", "jpeg", "hdr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
sgp4 = "0.3"
nalgebra = "0.32"
tokio = { version = "1.0", features = ["full"] }

